# bund_stdlib_text_classifier

./: Cargo.toml  Makefile  README.md
src/: bund_interface.rs  classifier_filter.rs  classifiers.rs  lib.rs  topic_classifier.rs
test/: general_test.rs
tests/: classifiers-test.rs  filter-test.rs  general-test.rs  integration-test.rs  topic-test.rs
