[package]
name = "bund_stdlib_text_classifier"
version = "0.4.0"
edition = "2021"
description = "Text classification using Bayes classifier for BUND programming language"
license-file = "LICENSE"
repository = "https://github.com/vulogov/bund_stdlib_text_classifier"
categories = ["compilers"]
keywords = ["language", "stack", "concatenative", "lambda", "dynamic"]
exclude = ["examples", "Models", "Documentation", ".*"]

[dependencies]
bayesic = "0.1.1"
bundcore = "0.4.0"
charabia = "0.9.7"
easy-error = "1.0.0"
growable-bloom-filter = "2.1.1"
lazy_static = "1.5.0"
log = "0.4.28"
rust_dynamic = "0.48.0"
rust_multistackvm = "0.38.0"
